后台分组和权限

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ APP_DEBUG=true
 APP_KEY=sTmkzjnQXS4JSwX1XOkxq0SzHcwqzfF3
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.142.56
+DB_HOST=127.0.0.1
 DB_DATABASE=lamp142
-DB_USERNAME=zzg
-DB_PASSWORD=111111
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
