--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_KEY=sTmkzjnQXS4JSwX1XOkxq0SzHcwqzfF3
 DB_CONNECTION=mysql
 DB_HOST=192.168.142.56
 DB_DATABASE=lamp142
-DB_USERNAME=zzg
+DB_USERNAME=lxf
 DB_PASSWORD=111111
 
 CACHE_DRIVER=file
